# genesis-launcher

./: package.json  pnpm-lock.yaml  tailwind.config.js  token GH  vite.config.ts
.github/workflows/: build.yaml
src/: App.css  App.tsx  main.tsx  output.css  styles.css
src-tauri/: Anim1.def  AnimationSequence.uop  Body.def  Bodyconv.def  Cargo.toml  Cliloc.cht  Cliloc.enu  Cliloc.esp  Cliloc.fra  Cliloc.jpn  Cliloc.kor  Corpse.def  Default.mac  Equipconv.def  Keynames.txt  Login.cfg  Macros.txt  MainMisc.uop  Obscene.lst  Prof.txt  Skills.idx  TexTerr.def  UO.exe.manifest  Uo.cfg  Uomax.cfg  Uoreg.cfg  Uoupg.cfg  Verinfo  Version.txt  anim2.idx  anim3.idx  anim4.idx  anim5.idx  animinfo.mul  artidx.mul  facet02.mul  facet03.mul  facet04.mul  facet05.mul  gump.def  (+27 more)
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  files.rs  game.rs  http_client.rs  logging.rs  main.rs  platform_utils.rs  tray.rs
src/assets/: svgs.ts
src/components/: Footer.tsx  Spinner.css  Spinner.tsx  TopBar.tsx  banner.tsx  playButton.tsx  progressBar.tsx  settingsModal.tsx  statusFrame.tsx
src/components/nav/: Nav.tsx  NavIcon.tsx  NavLink.tsx
src/contexts/: Loading.tsx
src/utils/: checkFiles.ts  consts.ts  hashes.ts  httpClient.ts  path.ts  settings.ts
