[package]
name = "genesis-launcher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = {version = "0.12.4", features = ["json", "stream"] }
tokio = "1.38.0"
sha2 = "0.10.8" # Możesz sprawdzić najnowszą wersję na https://crates.io/crates/sha2
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
futures-util = "0.3"
percent-encoding = "2.3.1"
chrono = "0.4.38"
zip = "0.6"
futures = "0.3"
tokio-util = "0.7"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
